test/fail/action-return.app
//There is no page with signature

application test

  define page root(){
    action root(){
      return roott();
    }
  }